--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
+.DS_store
 Pods/
+meridian_watch_app.xcworkspace/xcshareddata/
+meridian_watch_app.xcworkspace/xcuserdata/
+meridian_watch_app.xcodeproj/xcuserdata/
